# pi-tag-detector

./: CMakeLists.txt  FiducialModelPi.cpp  nodelet_plugins.xml  package.xml  pitag_ros.cpp  pitag_ros_nodelet.cpp  pitag_ros_nodelet.h  pitag_ros_nodelet.xml  readme.md
